6-Sep-2003 by Matze Braun -added a unix implementation of _findfirst, _findnext and _findclose -removed some getDrive functions, was never used and supporting drives in unix  is hard :) -we still need a big commit to replace all \\ in paths with / -added a fastly hacked configure script (no autoconf yet)

--- a/trunk/netpanzer/src/Makefile
+++ b/trunk/netpanzer/src/Makefile
@@ -1,5 +1,4 @@
-SYSTEM=WIN32
-#SYSTEM=UNIX
+include config.mak
 
 DIRS = . Lib Lib/2D Lib/Environment Lib/Interfaces Lib/Particles \
 	   Lib/PObject/Classes Lib/PObject/Templates Lib/Types Lib/View \
@@ -35,15 +34,12 @@ endif
 	   
 SOURCES = $(foreach dir, $(DIRS), $(wildcard $(dir)/*.cpp))
 OBJECTS = $(SOURCES:.cpp=.o)
-# eventually disable if you don't have makedep installed (but you don't have
-# dependency checking then)
-#MAKEDEPEND=makedepend
 
 $(GOAL): $(OBJECTS)
-		g++ -o $(GOAL) $(OBJECTS) $(LINKFLAGS)
+		$(CXX) -o $(GOAL) $(OBJECTS) $(LINKFLAGS)
 
 %.o: %.cpp
-		g++ $(CFLAGS) -c -o $@ $<
+		$(CXX) $(CFLAGS) -c -o $@ $<
 
 ifneq (,$(MAKEDEPEND))
 .depend: $(SOURCES)
