added note about jam at the end of configure process

--- a/trunk/netpanzer/configure.ac
+++ b/trunk/netpanzer/configure.ac
@@ -124,3 +124,6 @@ CS_OUTPUT_INSTALLDIRS
 AC_CONFIG_FILES([Jamconfig])
 AC_OUTPUT
 
+AC_MSG_NOTICE([
+Please note that this project uses jam (and not make) as build tool.
+])
