work around autoconf bugfeature which is adding -g -O2 to our CFLAGS all the time

--- a/trunk/netpanzer/configure.ac
+++ b/trunk/netpanzer/configure.ac
@@ -23,6 +23,9 @@ AH_TOP([
 #endif
 ])
 
+# stupid autoconf is adding default -g -O2 flags when we don't do this :-/
+test ".$CXXFLAGS" = "." && CXXFLAGS=" "
+
 #----------------------------------------------------------------------------
 # Check for operating system
 #----------------------------------------------------------------------------
