01-Feb-2004 by Matthias Braun -added a jam rule to create doxygen documentation

--- a/trunk/netpanzer/configure.ac
+++ b/trunk/netpanzer/configure.ac
@@ -65,6 +65,7 @@ AC_TRY_COMPILE([], [
 Error: You gcc version is too old. netpanzer needs at least gcc 3.2.0.
 ])])
 AC_LANG_RESTORE
+AC_CHECK_PROGS(DOXYGEN, [doxygen])
 
 #----------------------------------------------------------------------------
 # find libraries
