improved SDL_ttf check to fail on old versions

--- a/trunk/netpanzer/configure.ac
+++ b/trunk/netpanzer/configure.ac
@@ -105,7 +105,7 @@ NP_FINDLIB([SDLIMAGE], [SDL_image], [SDL_image >= 1.2],
 	[$SDL_CFLAGS], [$SDL_LIBS])
 
 NP_FINDLIB([SDLTTF], [SDL_ttf], [SDL_ttf >= 2.0.0],
-	NP_LANG_PROGRAM([#include <SDL_ttf.h>], [TTF_Init();]),
+	NP_LANG_PROGRAM([#include <SDL_ttf.h>], [if(!TTF_WasInit()) TTF_Init();]),
 	[], [-lSDL_ttf],
 	[],
 	[AC_MSG_ERROR([Please install SDL_ttf >= 2.0.0])],
