small bug and leakfixes

--- a/trunk/masterserver/src/Makefile.am
+++ b/trunk/masterserver/src/Makefile.am
@@ -3,4 +3,5 @@ masterserver_SOURCES = Config.hpp Config.cpp Log.cpp Log.hpp main.cpp   \
                 MasterServer.cpp MasterServer.hpp                       \
                 RequestThread.cpp RequestThread.hpp ServerInfo.hpp      \
                 SocketStream.hpp Tokenizer.hpp
+masterserver_CXXFLAGS = -DLOCALSTATEDIR=\"${localstatedir}\"
 masterserver_LDFLAGS = -pthread
