install sample config and cache files

--- a/trunk/masterserver/Makefile.am
+++ b/trunk/masterserver/Makefile.am
@@ -1,3 +1,8 @@
 AUTOMAKE_OPTIONS = foreign
 SUBDIRS = src exampleclient
-EXTRA_DIST = autogen.sh
+EXTRA_DIST = autogen.sh masterserver.cfg.sample neighbors.sample
+
+configfiledir = $(sysconfdir)/masterserver
+configfile_DATA = masterserver.cfg.sample
+cachedir = $(localstatedir)/cache/masterserver
+cache_DATA = neighbors.sample
