some rewrites to be compliant with the new protocol. Also makes the code a bit cleaner and safer

--- a/trunk/masterserver/masterserver.cfg.sample
+++ b/trunk/masterserver/masterserver.cfg.sample
@@ -2,7 +2,7 @@
 [server]
 # you can specify an address here, if you don't want to bind on all network
 # interfaces
-listen-address=
+listen=127.0.0.1
 port=28900
 # time until a server is considered dead
 server-alive-timeout=720
