--- a/trunk/masterserver/Makefile.am
+++ b/trunk/masterserver/Makefile.am
@@ -2,7 +2,7 @@ AUTOMAKE_OPTIONS = foreign
 SUBDIRS = src exampleclient
 EXTRA_DIST = autogen.sh masterserver.cfg.sample neighbors.sample
 
-configfiledir = $(sysconfdir)/masterserver
+configfiledir = $(sysconfdir)
 configfile_DATA = masterserver.cfg.sample
 cachedir = $(localstatedir)/cache/masterserver
 cache_DATA = neighbors.sample
