--- a/trunk/masterserver/Makefile.am
+++ b/trunk/masterserver/Makefile.am
@@ -1,4 +1,4 @@
-AUTOMAKE_OPTIONS = foreign
+AUTOMAKE_OPTIONS = foreign 1.7 dist-bzip2
 SUBDIRS = src exampleclient docs
 EXTRA_DIST = autogen.sh masterserver.cfg.sample neighbors.sample
 
