don't forget to package the usual textfiles in the release

--- a/trunk/masterserver/Makefile.am
+++ b/trunk/masterserver/Makefile.am
@@ -1,6 +1,6 @@
 AUTOMAKE_OPTIONS = foreign 1.7 dist-bzip2
 SUBDIRS = src exampleclient docs
-EXTRA_DIST = autogen.sh masterserver.cfg.sample neighbors.sample
+EXTRA_DIST = NEWS README TODO COPYING BUGS autogen.sh masterserver.cfg.sample neighbors.sample
 
 configfiledir = $(sysconfdir)
 configfile_DATA = masterserver.cfg.sample
