-add a missing include path in the codeblocks project

--- a/trunk/netpanzer/NetPanzer.cbp
+++ b/trunk/netpanzer/NetPanzer.cbp
@@ -39,6 +39,7 @@
 			<Add directory="./src/NetPanzer" />
 			<Add directory="./" />
 			<Add directory="./src/Lib/physfs" />
+			<Add directory="./src/Lib/physfs/zlib123" />
 		</Compiler>
 		<Linker>
 			<Add option="`sdl-config --libs`" />
