- the game font is compiled statically in the code - new function Surface::renderText - changed Component, Button and CheckBox to use new font rendering and to redraw itself only when changed

--- a/trunk/netpanzer/NetPanzer-windows.cbp
+++ b/trunk/netpanzer/NetPanzer-windows.cbp
@@ -50,6 +50,7 @@
 			<Add library="SDLmain" />
 			<Add library="SDL" />
 		</Linker>
+		<Unit filename="src\Lib\2D\BuiltinFont.cpp" />
 		<Unit filename="src\Lib\2D\Color.cpp" />
 		<Unit filename="src\Lib\2D\Color.hpp" />
 		<Unit filename="src\Lib\2D\ColorTable.cpp" />
