--- a/trunk/netpanzer/NetPanzer.cbp
+++ b/trunk/netpanzer/NetPanzer.cbp
@@ -45,6 +45,7 @@
 			<Add option="`sdl-config --libs`" />
 			<Add library="SDL_mixer" />
 		</Linker>
+		<Unit filename="src/Lib/2D/BuiltinFont.cpp" />
 		<Unit filename="src/Lib/2D/Color.cpp" />
 		<Unit filename="src/Lib/2D/Color.hpp" />
 		<Unit filename="src/Lib/2D/ColorTable.cpp" />
